--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <!-- Thema-kleur voor adresbalk -->
   <meta name="theme-color" content="#317EFB">
+  <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
 </head>
 <body>
   <div id="chatbox"></div>
